# minecraft-week

./: Cargo.toml  README.md  rustfmt.toml
src/: atlas.rs  block.rs  chunk.rs  main.rs  mesher.rs  minecraft_week.rs  pipelines.rs  player.rs  skybox.rs  terrain.rs
src/application/: app_runner.rs  gui.rs  input.rs  mod.rs  state.rs
src/engine/: aabb.rs  camera.rs  kinematics.rs  mod.rs  neighbors.rs  player.rs  ray.rs  rectilinear.rs  transform.rs  util.rs
src/engine/storage/: buffer.rs  mod.rs  stack.rs  vector.rs
src/render/: mesh.rs  mod.rs  resource.rs  resources.rs  util.rs
src/shaders/: block_illumination.wgsl  crosshair.wgsl  culledframe.wgsl  highlight.wgsl  rainbow.wgsl  skybox.wgsl  terrain.wgsl  time_gradient.wgsl  water.wgsl  wireframe.wgsl
src/terrain/: mod.rs
src/visual/: atlas.rs  light.rs  mesher.rs  mod.rs  pipelines.rs  skybox.rs
src/world/: block.rs  chunk.rs  delta.rs  light.rs  manager.rs  map.rs  mod.rs  physics.rs  terrain.rs
